# Copyright 2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//mojo/public/tools/bindings/mojom.gni")

mojom("mojom") {
  sources = [
    "media_codec_capability.mojom",
    "media_track_info.mojom",
    "media_types_neva.mojom",
  ]

  public_deps = [
    "//mojo/public/mojom/base",
  ]

  cpp_typemaps = [
    {
      types = [
        {
          mojom = "media.mojom.MediaCodecCapability"
          cpp = "::media::MediaCodecCapability"
        },
      ]
      traits_headers = [
        "//media/base/ipc/media_param_traits_macros.h",
        "media_codec_capability_mojom_traits.h",
      ]
      traits_sources = [ "media_codec_capability_mojom_traits.cc" ]
      traits_public_deps = [ "//media" ]
    },

    {
      types = [
        {
          mojom = "media.mojom.MediaTrackInfo"
          cpp = "::media::MediaTrackInfo"
        },
        {
          mojom = "media.mojom.MediaTrackType"
          cpp = "::media::MediaTrackType"
        },
      ]
      traits_headers = [
        "//media/base/ipc/media_param_traits_macros.h",
        "media_track_info_mojom_traits.h",
      ]
      traits_sources = [ "media_track_info_mojom_traits.cc" ]
      traits_public_deps = [ "//media" ]
    },

    {
      types = [
        {
          mojom = "media.mojom.FeedType"
          cpp = "::media::FeedType"
        },
        {
          mojom = "media.mojom.MediaEventType"
          cpp = "::media::MediaEventType"
        },
        {
          mojom = "media.mojom.MediaPlayerType"
          cpp = "::media::MediaPlayerType"
        },
        {
          mojom = "media.mojom.PlayerEvent"
          cpp = "::media::PlayerEvent"
        },
        {
          mojom = "media.mojom.RestorePlaybackMode"
          cpp = "::media::RestorePlaybackMode"
        },
        {
          mojom = "media.mojom.SuspendReason"
          cpp = "::media::SuspendReason"
        },
      ]
      traits_headers = [ "//media/base/ipc/media_param_traits_macros.h" ]
      traits_public_deps = [ "//media" ]
    },
  ]
}
