# Copyright 2020 LG Electronics, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

import("//neva/neva.gni")

source_set("renderer") {
  defines = [ "IS_INJECTION_IMPL" ]

  deps = [
    "//neva/injection/renderer",
    "//neva/injection/renderer:resources"
  ]

  sources = [
    "injection_install.cc",
    "injection_install.h",
  ]

  if (enable_browser_control_webapi) {
    sources += [
      "browser_control_webapi.cc",
      "browser_control_webapi.h",
    ]
  }

  if (enable_network_error_page_controller_webapi) {
    sources += [
      "network_error_page_controller_webapi.cc",
      "network_error_page_controller_webapi.h",
    ]
  }

  if (enable_sample_webapi) {
    sources += [
      "sample_webapi.cc",
      "sample_webapi.h",
    ]
  }

  if (is_webos) {
    sources += [
      "webossystem_webapi.cc",
      "webossystem_webapi.h",
      "webosservicebridge_webapi.cc",
      "webosservicebridge_webapi.h"
    ]

    if (enable_memorymanager_webapi) {
      sources += [
        "memorymanager_webapi.cc",
        "memorymanager_webapi.h",
      ]
    }

    if (use_gav) {
      sources += [
        "webosgavplugin_webapi.cc",
        "webosgavplugin_webapi.h",
      ]
    }
  }
}
